2001-08-20  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode): Add newlines to fix layout problem calling
	'C-h m'.

2001-08-18  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-ensure-source-references): Use 'string-to-number'
	instead of 'string-to-int'.
	(po-msgfmt-version-check): Likewise.

2001-08-11  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-edit-string): Set indent-line-function to
	indent-relative; useful for editing --help messages.

2001-08-02  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-find-charset): Drop 'interactive'. Use
	'insert-file-contents-literally' to avoid side effects. Correct off
	by 1 error.

2001-08-07  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-subedit-mode-menu-layout): New definition.
	(po-edit-string): Use it to provide a menu for po-subedit-mode.

2001-08-01  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-find-awk-string, po-mark-awk-string,
	po-find-bash-string, po-mark-bash-string): New functions.
	(po-preset-string-functions): Add awk and bash support.

2001-08-02  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-find-file-coding-system-guts): Use ascii instead of
	none.
	(po-compute-counters): Don't start counting if there is not even a
	header entry.

2001-07-26  Bruno Haible  <haible@clisp.cons.org>

	* automake.diff: Update for automake-1.4-p5.

2001-08-01  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el: Optimize testing for XEmacs.
	(po-auto-replace-revision-date): Do not quote t, as it evals to
	itself.
	(po-validate): Use the mode name instead of the constant PO to build
	the validation buffer name.
	(po-font-lock-keywords, po-find-charset,
	po-find-file-coding-system-guts, po-find-file-coding-system): Adjust
	some lines so they fit in 79 columns (pre-VT100).
	(po-compute-counters): Use string-equal instead of string=, to be
	consistent with the remainder of that code.
	(po-find-charset): Avoid infinite loop on empty file.

2000-05-31  Hrvoje Niksic  <hniksic@iskon.hr>
