@@ -1,3 +1,9 @@
+2001-08-23  Karl Eichwalder  <ke@suse.de>
+
+	* po-mode.el (po-compute-counters): First save `current'
+	po-start-of-msgstr; use it to set `position' while looping over all
+	entries.
+
 2001-08-20  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-mode): Add newlines to fix layout problem calling
